--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "react-markdown": "^4.2.2",
     "react-photoswipe": "^1.3.0"
   },
+  "resolutions": {
+    "graphql": "^14.6.0"
+  },
   "keywords": [
     "gatsby"
   ],
@@ -62,7 +65,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "del-cli": "^3.0.0",
+    "del-cli": "^3.0.1",
     "prettier": "^1.18.2"
   }
 }
